2004-02-08  Jason Leach  <leach@wam.umd.edu>

	* Makefile.am (CLEANFILES): Add .server and .server.in here.
        (#132071, Padraig O'Briain)

2004-02-05  Dennis Smit  <ds@nerds-incorporated.org>
	
	Patch by Kjartan Maraas <kmaraas@gnome.org>:

	* wireless_applet.c (wireless_applet_draw):
	cleanup deprecated, and added FIXME for the i18n
	hostile icon.

2004-01-31  Dennis Smit  <ds@nerds-incorporated.org>

	* wireless/wireless_applet.c:
	Added about_dialog GtkWidget to the WirelessApplet structure.
	(wireless_applet_about_cb):
	Use the per instance about dialog.
	(wireless_applet_destroy):
	Destroy the about dialog when it's still open.
	(setup_widgets):
	Initialize the about dialog with NULL.

	Fixes #132541

2004-01-12  Jon K Hellan  <hellan@acm.org>

	* wireless-applet.c (wireless_applet_new): Remove spurious
	newline, making it compile again.

2004-01-12  Leena Gunda  <leena.gunda@wipro.com>

	* wireless-applet.c: (wireless_applet_new)
	Set the accessible name and description.
	Fixes bug #128262.

2003-10-23  Kaushal Kumar  <kaushal.kumar@wipro.com>

	* Makefile.am: Removed GTK_DISABLE_DEPRECATED flag until
	the porting is done. Fixes bug #124630. 

2003-10-09  Kjartan Maraas  <kmaraas@gnome.org>

	* wireless-applet.c: (wireless_applet_destroy),
	(wireless_applet_new): Merge fix for bug #124151 from
	stable.

2003-09-23  Muktha  <muktha.narayan@wipro.com>

	* Provided Help in the applet's context menu and the prefences
	  dialog. Fixes bug #122092.

Mon Sep 15 15:13:29 2003  George Lebl <jirka@5z.com>

	* wireless-applet.c: When started in locked down mode, hide
	  the preferences item

2003-08-22  Breda McColgan  <breda.mccolgan@sun.com>

	* wireless/docs/C/wireless.xml: updated references to figures
	* wireless/docs/C/wireless-C.omf: updated date and version number
	* wireless/docs/C/l10n.txt: updated references to figures
	* wireless/docs/C/figures/wireless_applet.png: deleted this file
	* wireless/docs/C/figures/wireless_applet_conn.png: added this file