@@ -1,4 +1,4 @@
-Wireless Link Monitor Applet Manual V2.1
+Wireless Link Monitor Applet Manual V2.2
 
 ------------------------
 SUMMARY OF CHANGES
@@ -15,6 +15,12 @@ Summary of changes:
 * Deleted wireless_applet.png
 * Added wireless_applet_conn.png and wireless_applet_no_conn.png
 * Updated wireless.xml and wireless-C.omf accordingly
+
+Updated by: Breda McColgan
+Date: February 2004
+Manual version: 2.2
+Summary of changes:
+* Updated for GNOME 2.6.
 
 
 
