@@ -2,18 +2,18 @@
 <omf>
   <resource>
     <creator>
-      gdocteam@sun.com (Sun Microsystems)
+      docs@gnome.org (GDP)
     </creator>
     <maintainer>
-      gdocteam@sun.com (Sun Microsystems)
+      docs@gnome.org (GDP)
     </maintainer>
     <title>
-      Wireless Link Monitor Manual V2.1
+      Wireless Link Monitor Manual V2.2
     </title>
     <date>
-      2003-08-22
+      2004-02-18
     </date>
-    <version identifier="2.1" date="2003-08-22" description="Updated for GNOME 2.4, program version 2.3.6"/>
+    <version identifier="2.2" date="2004-02-18" description="Updated for GNOME 2.6, program version 2.5.5"/>
     <subject category="GNOME|Applets|Internet"/>
     <description>
       User manual for the Wireless Link Monitor applet. 
