@@ -1,3 +1,9 @@
+2004-02-18 Breda McColgan <breda.mccolgan@sun.com>
+
+	* docs/C/wireless.xml: Updated for GNOME 2.6.
+	* docs/C/wireless-C.omf: Updated for GNOME 2.6.
+	* docs/C/l10n.txt: Updated for GNOME 2.6.
+
 2004-02-08  Jason Leach  <leach@wam.umd.edu>
 
 	* Makefile.am (CLEANFILES): Add .server and .server.in here.
